criando o crud de usuarios e iniciando com banco e os metodos e atributos nas entity
